tests/pass/parsingBoth/big int support.mm0
prefix	plus		:
$	+
$
prec		
2147483646;	