tests/fail/parsingBoth/negative int.mm0
prefix plus : $ + $ prec -1;
